--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 --------------------------------------------------------------*/
 body {
   background: #ffffff;
-  color: #898989;
+  color: #514e4e;
   font-family: "Poppins", helvetica;
   font-size: 15px;
   font-weight: 300;
@@ -51,7 +51,7 @@ p {
   margin: 25px 0;
   padding: 0;
   font-size: 15px;
-  color: #999999;
+  color: #474646;
   line-height: 28px;
 }
 
@@ -204,7 +204,7 @@ p {
 }
 
 #header .logo a {
-  color: #898989;
+  color: #5d5b5b;
 }
 
 #header .logo img {
@@ -248,7 +248,7 @@ p {
   font-family: "Poppins", sans-serif;
   font-size: 14px;
   font-weight: 500;
-  color: #7e7d7d;
+  color: #444343;
   white-space: nowrap;
   transition: 0.3s;
 }
@@ -528,7 +528,7 @@ p {
 .breadcrumbs ol li+li::before {
   display: inline-block;
   padding-right: 10px;
-  color: #6c757d;
+  color: #434445;
   content: "/";
 }
 
@@ -625,11 +625,11 @@ p {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #373649;
+  border: 1px solid #2b2b2c;
 }
 
 .services-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #373649;
+  background-color: #2b2b2c;
 }
 
 /*--------------------------------------------------------------
@@ -695,7 +695,7 @@ p {
 }
 
 #portfolio .portfolio-item .portfolio-info p {
-  color: #999;
+  color: #525050;
   font-size: 14px;
   margin: 0;
   padding: 0;
